<resources>
    <string name="app_name">My Practice</string>
    <string name="sign_up_text">Register your practice</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="todays_appointments">today\'s appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name = "default_web_client_id">"639364246440-ff4un79amtmqfllumu1irkh42fl63kn4.apps.googleusercontent.com"</string>
</resources>